Fixed design bugs on mobile

--- a/src/assets/scss/buefy.scss
+++ b/src/assets/scss/buefy.scss
@@ -50,7 +50,7 @@ $card-shadow: 0 0 0 0;
 
   &-menu {
     min-width: 0;
-    transform: translateX(-50%);
+    transform: translateX(-80%);
   }
 }
 
